# SRDATemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: PostBuild.cmake
libs/: CMakeLists.txt
